# gremlin

./: .gitignore  Cargo.toml  README.md  TECHNICAL.md  package.json  setup.sh
.claude/: settings.local.json
.github/workflows/: deploy.yml
crates/coordinator/: Cargo.toml
crates/coordinator/src/: lib.rs
docs/: CNAME  index.html
proxy/: worker.js  wrangler.toml
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/scripts/: encode-wasm.mjs  smoke-test.mjs
web/server/: browser-server.mjs
web/src/: App.svelte  app.css
web/src/components/: ActivityMonitor.svelte  AgentCard.svelte  AgentEditModal.svelte  AgentPanel.svelte  CodeViewer.svelte  FileTree.svelte  HelpModal.svelte  NewModeModal.svelte  SessionHistory.svelte  SettingsModal.svelte  TuningView.svelte
web/src/lib/: agentRunner.ts  api.ts  autotune.ts  cleanContent.ts  cloudflare.ts  coordinator.ts  filesystem.ts  headless.ts  sanitize.ts  search.ts  store.svelte.ts  tableCards.ts  teamGenerator.ts  tools.ts  types.ts  webllm.ts
web/src/lib/__tests__/: cleanContent.test.ts  coordinator.test.ts  sanitize.test.ts  tableCards.test.ts
