[package]
name = "gremlin-coordinator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
js-sys = "0.3"
console_error_panic_hook = "0.1"

# Maximum optimisation for release builds targeting WASM
[profile.release]
opt-level     = 3          # Full optimisation
lto           = true       # Link-time optimisation (reduces binary size significantly)
codegen-units = 1          # Single codegen unit for best LTO
panic         = "abort"    # Smaller WASM — no unwinding tables needed
strip         = true       # Strip debug symbols
